@@ -2547,7 +2547,6 @@ AC_CONFIG_FILES([libraries/clib/sound/Makefile])
 AC_CONFIG_FILES([libraries/clib/sound/alsa/Makefile])
 AC_CONFIG_FILES([libraries/clib/sound/common/Makefile])
 AC_CONFIG_FILES([libraries/clib/sound/esd/Makefile])
-AC_CONFIG_FILES([libraries/javalib/rebuildLib])
 AC_CONFIG_FILES([kaffe/man/kaffe.1])
 AC_CONFIG_FILES([kaffe/scripts/install-jar])
 AC_CONFIG_FILES([kaffe/scripts/kaffe])
