@@ -1,49 +1,0 @@
-#! /bin/sh
-#
-# rebuildLib - rebuild everything in one sweep
-#
-# Copyright (c) 1998, 1999
-#      Transvirtual Technologies, Inc.  All rights reserved.
-#
-# See the file "license.terms" for information on usage and redistribution
-# of this file.
-#
-
-if [ -z "$1" ] ; then
-    exit 0
-fi
-
-LIBDIR=`cd $LIBDIR && pwd`
-VERBOSE=
-
-issrcdir=`echo $srcdir | egrep '^/.*'`
-if [ -z "${issrcdir:-}" ]; then
-	srcdir="`pwd`/$srcdir"
-fi
-
-if [ -z "${JAVA_COMPILER:-}" ] ; then
-	if [ -z "${JAVA:-}" ]; then
-		test -f ${top_builddir}/BUILD_ENVIRONMENT && . ${top_builddir}/BUILD_ENVIRONMENT
-		BOOTCLASSPATH=${BOOTCLASSPATH}:${CLASSPATH}:${LIBDIR}; export BOOTCLASSPATH
-		JAVA="$JAVA -verbosegc"
-	fi
-	if [ -z "${JAVAC:-}" ]; then
-# Kaffe needs more than 64 M of memory to compile all of the
-# class library at once using kjc. Set maximal memory to 512 M
-# to be on the safe side. Actual usage is around 200M.
-		JAVAC="$JAVA -ss 500k -mx 512M at.dms.kjc.Main"
-		VERBOSE=-v
-	fi
-	CPATH="${CPATH+-classpath $CLASSPATH:$BOOTCLASSPATH}"
-else
-	test -f ${top_builddir}/BUILD_ENVIRONMENT && . ${top_builddir}/BUILD_ENVIRONMENT
-	CLASSPATH=${CLASSPATH}:${LIBDIR}
-	JAVAC="$JAVA_COMPILER"
-	CPATH="${CPATH+-classpath $CLASSPATH:$BOOTCLASSPATH}"
-#	VERBOSE=${VERBOSE-"-verbose"}
-fi
-
-cd ${srcdir}
-
-echo "Compiling classes from " ${1+"$@"} " using " $JAVAC $VERBOSE $JAVAC_FLAGS -bootclasspath ${BOOTCLASSPATH} -classpath ${CLASSPATH} -d $LIBDIR $CPATH
-$JAVAC $VERBOSE $JAVAC_FLAGS -bootclasspath ${BOOTCLASSPATH} -classpath ${CLASSPATH} -d $LIBDIR $CPATH ${1+"$@"}
